--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.1",
+    "markdown-it-mathjax3": "^4.3.2",
     "vue": "^3.3.9"
   },
   "keywords": [],
