--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "serve": "vitepress serve"
   },
   "dependencies": {
-    "cross-env": "^7.0.3",
+    "dayjs": "^1.11.10",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-task-checkbox": "^1.0.6",
     "medium-zoom": "^1.1.0",
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "@types/node": "^20.10.1",
+    "busuanzi.pure.js": "^1.0.3",
+    "cross-env": "^7.0.3",
     "markdown-it-mathjax3": "^4.3.2",
     "vue": "^3.3.9"
   },
