--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-task-checkbox": "^1.0.6",
     "medium-zoom": "^1.1.0",
-    "vitepress": "1.0.0-rc.44"
+    "vitepress": "^1.1.4"
   },
   "devDependencies": {
     "@types/blueimp-md5": "^2.18.2",
