--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "devDependencies": {
     "@types/blueimp-md5": "^2.18.2",
     "@types/node": "^20.10.1",
+    "@vite-pwa/vitepress": "^0.4.0",
     "busuanzi.pure.js": "^1.0.3",
     "cross-env": "^7.0.3",
+    "fast-glob": "^3.3.2",
     "markdown-it-mathjax3": "^4.3.2",
     "sass": "^1.71.1",
+    "vite-plugin-pwa": "^0.19.8",
     "vue": "^3.3.9"
   },
   "keywords": [],
